--- a/styles/globals.css
+++ b/styles/globals.css
@@ -941,3 +941,324 @@ body::-webkit-scrollbar {
   display: flex;
   gap: 16px;
 }
+
+.inner-book__description {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  color: #032b41;
+  font-weight: 500;
+  font-size: 14px;
+}
+.inner__wrapper {
+    display: flex;
+    gap: 16px;
+}
+@media (max-width: 992px){
+  .inner__wrapper {
+    flex-direction: column;
+    gap: 32px;
+  }
+  .inner__book {
+      order: 1;
+  }
+}
+.inner__book {
+    width: 100%;
+}
+.inner-book__author, .inner-book__title {
+    color: #032b41;
+    margin-bottom: 16px;
+    font-weight: 600;
+}
+
+.inner-book__sub--title {
+    font-size: 20px;
+    color: #032b41;
+    margin-bottom: 16px;
+    font-weight: 300;
+}
+.inner-book__wrapper {
+  border-top: 1px solid #e1e7ea;
+  border-bottom: 1px solid #e1e7ea;
+  padding: 16px 0;
+  margin-bottom: 24px;
+}
+.inner-book__description--wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 400px;
+  row-gap: 12px;
+}
+.inner-book__description {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  color: #032b41;
+  font-weight: 500;
+  font-size: 14px;
+}
+.inner-book__icon {
+  display: flex;
+  height: 24px;
+  width: 24px;
+  margin-right: 4px;
+}
+
+
+.inner-book__read--btn-wrapper {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 24px;
+}
+.inner-book__read--btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 144px;
+  height: 48px;
+  background-color: #032b41;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  gap: 8px;
+  transition: opacity .2s;
+}
+.inner-book__bookmark {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #0365f2;
+  font-weight: 500;
+  cursor: pointer;
+  margin-bottom: 40px;
+  font-size: 18px;
+  transition: color .2s;
+}
+
+.inner-book__bookmark--icon {
+  display: flex;
+  width: 20px;
+  height: 20px;
+}
+.inner-book__secondary--title {
+  font-size: 18px;
+  color: #032b41;
+  margin-bottom: 16px;
+  font-weight: 600;
+}
+.inner-book__tag {
+  background-color: #f1f6f4;
+  padding: 0 16px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  cursor: not-allowed;
+  color: #032b41;
+  font-weight: 500;
+  border-radius: 4px;
+  transition: background-color .2s;
+}
+.inner-book__tags--wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+.inner-book__book--description {
+  color: #032b41;
+  margin-bottom: 16px;
+  line-height: 1.5;
+}
+.inner-book__secondary--title {
+  font-size: 18px;
+  color: #032b41;
+  margin-bottom: 16px;
+  font-weight: 600;
+}
+.inner-book__author--description {
+  color: #032b41;
+  line-height: 1.5;
+}
+
+@media (max-width: 768px){
+  .inner-book__title {
+    font-size: 24px;
+  }
+.inner-book__sub--title {
+    font-size: 18px;
+}
+  .inner-book__author, .inner-book__author--description, .inner-book__book--description, .inner-book__tag {
+    font-size: 14px;
+}
+.inner-book__bookmark {
+  font-size: 16px;
+}
+}
+
+@media (max-width: 992px){
+.inner-book--img-wrapper {
+    display: flex;
+    justify-content: center;
+}
+}
+
+
+
+/* player */
+
+.audio__progress--bar{
+  background: linear-gradient(to right, rgb(43, 217, 124) 0%, rgb(109, 120, 125) 0%); --range-progress: 0%;
+}
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-left: 200px;
+  width: calc(100% - 200px);
+  transition: all .3s;
+}
+.search__background {
+  background-color: #fff;
+  border-bottom: 1px solid #e1e7ea;
+  height: 80px;
+  z-index: 1;
+}
+.summary {
+  position: relative;
+  width: 100%;
+  overflow-y: auto;
+  height: calc(100vh - 160px);
+}
+.audio__book--summary {
+  white-space: pre-line;
+  padding: 24px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.audio__book--summary-title {
+  color: #032b41;
+  font-size: 24px;
+  border-bottom: 1px solid #e1e7ea;
+  margin-bottom: 32px;
+  padding-bottom: 16px;
+  line-height: 1.5;
+}
+.audio__book--summary-text {
+  white-space: pre-line;
+  line-height: 1.4;
+  color: #032b41;
+}
+.audio__wrapper {
+  width: 100%;
+  height: 80px;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #042330;
+  padding: 0 40px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 9998;
+}
+.audio__wrapper>div {
+  width: calc(100% / 3);
+}
+.audio__track--wrapper {
+  display: flex;
+  gap: 12px;
+}
+.audio__controls, .audio__controls--btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.audio__controls--btn {
+  border-radius: 50%;
+  cursor: pointer;
+}
+.audio__track--image-mask {
+  display: flex;
+  max-width: 48px;
+}
+.audio__track--details-wrapper {
+  color: #fff;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+}
+.audio__track--author {
+  color: #bac8ce;
+}
+.audio__controls--btn-play {
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+}
+.audio__controls--btn {
+  border-radius: 50%;
+  cursor: pointer;
+}
+.audio__controls, .audio__controls--btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.audio__controls--btn svg {
+  width: 28px;
+  height: 28px;
+  stroke: #fff;
+  transition: all .2s;
+}
+.audio__progress--wrapper {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.audio__time {
+  color: #fff;
+  font-size: 14px;
+}
+.audio__progress--bar{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto,sans-serif;
+  border-radius: 8px;
+  height: 4px;
+  max-width: 300px;
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  appearance: none;
+  background: linear-gradient(to right, rgb(43, 217, 124) 0%, rgb(109, 120, 125) 0%);
+  --range-progress: 0%;
+}
+
+
+@media (max-width: 768px){
+  .audio__track--image-mask {
+    max-width: 80px;
+}
+.audio__wrapper {
+    height: 180px;
+    padding: 16px 24px;
+    flex-direction: column;
+}
+.audio__wrapper>div {
+    width: 100%;
+    justify-content: center;
+}
+}
+
+/* choose-plan */
+.wrapper__full {
+  margin-left: 0;
+  width: 100%;
+}
+
