--- a/styles/globals.css
+++ b/styles/globals.css
@@ -941,7 +941,14 @@ body::-webkit-scrollbar {
   display: flex;
   gap: 16px;
 }
-
+.inner-book__author, .inner-book__title {
+  color: #032b41;
+  margin-bottom: 16px;
+  font-weight: 600;
+}
+.inner-book__title {
+  font-size: 32px;
+}
 .inner-book__description {
   display: flex;
   align-items: center;
@@ -1108,9 +1115,6 @@ body::-webkit-scrollbar {
 
 /* player */
 
-.audio__progress--bar{
-  background: linear-gradient(to right, rgb(43, 217, 124) 0%, rgb(109, 120, 125) 0%); --range-progress: 0%;
-}
 .wrapper {
   position: relative;
   display: flex;
@@ -1171,7 +1175,7 @@ body::-webkit-scrollbar {
   display: flex;
   gap: 12px;
 }
-.audio__controls, .audio__controls--btn {
+.audio__controls{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1195,25 +1199,14 @@ body::-webkit-scrollbar {
 .audio__track--author {
   color: #bac8ce;
 }
+
 .audio__controls--btn-play {
   background-color: #fff;
   width: 40px;
   height: 40px;
 }
-.audio__controls--btn {
-  border-radius: 50%;
-  cursor: pointer;
-}
-.audio__controls, .audio__controls--btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.audio__controls--btn svg {
-  width: 28px;
-  height: 28px;
-  stroke: #fff;
-  transition: all .2s;
+.audio__controls {
+  gap: 24px;
 }
 .audio__progress--wrapper {
   display: flex;
@@ -1224,20 +1217,18 @@ body::-webkit-scrollbar {
   color: #fff;
   font-size: 14px;
 }
+
 .audio__progress--bar{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Roboto,sans-serif;
   border-radius: 8px;
-  height: 4px;
-  max-width: 300px;
-  width: 100%;
-  cursor: pointer;
-  outline: none;
-  appearance: none;
-  background: linear-gradient(to right, rgb(43, 217, 124) 0%, rgb(109, 120, 125) 0%);
-  --range-progress: 0%;
+    height: 4px;
+    max-width: 300px;
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: linear-gradient(to right, rgb(43, 217, 124) 0%, rgb(109, 120, 125) 0%); --range-progress: 0%
 }
 
 
@@ -1262,3 +1253,255 @@ body::-webkit-scrollbar {
   width: 100%;
 }
 
+.plan {
+  width: 100%
+}
+
+.plan__header--wrapper {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  padding-top: 48px;
+  margin-bottom: 24px
+}
+
+.plan__header--wrapper:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: #032b41;
+  border-bottom-right-radius: 16rem;
+  border-bottom-left-radius: 16rem
+}
+
+.plan__header {
+  max-width: 1000px;
+  margin: 0 auto;
+  color: #fff;
+  padding: 0 24px
+}
+
+.plan__title {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 40px
+}
+
+.plan__sub--title {
+  font-size: 20px;
+  margin-bottom: 32px
+}
+
+.plan__img--mask {
+  display: flex;
+  justify-content: center;
+  max-width: 340px;
+  margin: 0 auto;
+  border-radius: 180px 180px 0 0;
+  overflow: hidden
+}
+
+.plan__img--mask img {
+  width: 100%;
+  height: 100%
+}
+
+.plan__features--icon {
+  display: flex;
+  justify-content: center;
+  color: #032b41;
+  margin-bottom: 12px
+}
+
+.plan__features--icon svg {
+  width: 60px;
+  height: 60px
+}
+
+.plan__features--text {
+  color: #394547;
+  line-height: 1.5
+}
+
+.plan__features--wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  text-align: center;
+  grid-gap: 24px;
+  gap: 24px;
+  max-width: 800px;
+  margin: 0 auto 56px
+}
+
+.plan__card {
+  display: flex;
+  gap: 24px;
+  padding: 24px;
+  background-color: #f1f6f4;
+  border: 4px solid #bac8ce;
+  border-radius: 4px;
+  cursor: pointer;
+  max-width: 680px;
+  margin: 0 auto
+}
+
+.plan__card--title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #032b41;
+  margin-bottom: 8px
+}
+
+.plan__card--text {
+  color: #6b757b;
+  font-size: 14px
+}
+
+.plan__card--price {
+  font-size: 24px;
+  font-weight: 700;
+  color: #032b41;
+  margin-bottom: 8px
+}
+
+.plan__card--active {
+  border: 4px solid #2be080
+}
+
+.plan__card--circle {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 2px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.plan__card--dot {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background-color: #000;
+  border-radius: 50%
+}
+
+.plan__card--separator {
+  font-size: 14px;
+  color: #6b757b;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  max-width: 240px;
+  margin: 24px auto
+}
+
+.plan__card--separator:after,
+.plan__card--separator:before {
+  content: "";
+  flex-grow: 1;
+  height: 1px;
+  background: #bac8ce
+}
+
+.plan__card--cta {
+  background: #fff;
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  padding: 32px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px
+}
+
+.plan__disclaimer {
+  font-size: 12px;
+  color: #6b757b;
+  text-align: center
+}
+
+.accordion__icon--rotate {
+  transform: rotate(180deg);
+}
+.accordion__icon {
+  width: 24px;
+  min-width: 24px;
+  height: 24px;
+  transition: transform .3s;
+}
+.accordion__card {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 8px;
+  overflow: hidden;
+}
+.show{
+  height: auto;
+}
+.accordion__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 24px 0;
+  gap: 8px;
+}
+.accordion__title {
+  font-weight: 500;
+  font-size: 24px;
+  position: relative;
+  margin-bottom: 0;
+  color: #032b41;
+  transition: .3s;
+}
+.accordion__body {
+  min-height: 1px;
+  padding-bottom: 24px;
+  color: #394547;
+  line-height: 1.5;
+}
+.collapse {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height .35s ease;
+}
+@media (max-width:768px) {
+  .plan__title {
+      font-size: 26px;
+      margin-bottom: 32px
+  }
+
+  .plan__sub--title {
+      font-size: 16px
+  }
+
+  .plan__header--wrapper:before {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0
+  }
+
+  .plan__features--wrapper {
+      grid-template-columns: 1fr
+  }
+
+  .plan__card--title {
+      font-size: 16px
+  }
+
+  .plan__card--text {
+      font-size: 12px
+  }
+
+  .plan__card--price {
+      font-size: 20px
+  }
+}
