--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,14 +52,7 @@ button:disabled {
   padding: 40px 0;
   width: 100%;
 }
-.wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-left: 200px;
-  width: calc(100% - 200px);
-  transition: all .3s;
-}
+
 .btn {
   background-color: #2bd97c;
   color: #032b41;
@@ -662,14 +655,6 @@ button:disabled {
   font-size: 16px;
 }
 
-.wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-left: 200px;
-  width: calc(100% - 200px);
-  transition: all .3s;
-}
 
 /* search */
 .search__input--wrapper {
@@ -1175,16 +1160,21 @@ body::-webkit-scrollbar {
 
 
 /* player */
-
-.wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-left: 200px;
-  width: calc(100% - 200px);
-  transition: all .3s;
+.wrapper{
+  margin-left: 0;
+  width: 100%;
 }
 
+@media (min-width: 768px) {
+  .wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 200px;
+    width: calc(100% - 200px);
+    transition: all .3s;
+  }
+}
 .search__background {
   background-color: #fff;
   border-bottom: 1px solid #e1e7ea;
@@ -1837,4 +1827,43 @@ body::-webkit-scrollbar {
 .sidebar__toggle--btn svg {
   width: 24px;
   height: 24px
+}
+
+
+/* search */
+.search__books--wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 440px;
+  width: 100%;
+  max-height: 640px;
+  margin-left: auto;
+  overflow-y: auto;
+  padding: 16px;
+  position: absolute;
+  top: 104px;
+  right: 24px;
+  background-color: #fff;
+  border: 1px solid #e1e7ea;
+  box-shadow: 0 0 6px 0 rgba(0,0,0,.14);
+}
+.search__book--link {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  gap: 24px;
+  height: 120px;
+  border-bottom: 1px solid #e1e7ea;
+}
+.search__book--title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #032b41;
+  margin-bottom: 8px;
+}
+.search__book--author {
+  font-size: 14px;
+  font-weight: 300;
+  color: #6b757b;
+  margin-bottom: 8px;
 }
