--- a/styles/globals.css
+++ b/styles/globals.css
@@ -745,12 +745,6 @@ button:disabled {
   }
 }
 
-@media (max-width: 1024px) {
-  .selected__book {
-    width: 100%;
-  }
-}
-
 
 @media (max-width: 768px) {
   .selected__book--sub-title {
@@ -848,7 +842,11 @@ button:disabled {
     font-size: 14px;
   }
 }
-
+@media (max-width: 1200px){
+.selected__book {
+    width: 100%;
+}
+}
 .for-you__recommended--books {
   display: flex;
   overflow-x: auto;
@@ -1866,4 +1864,121 @@ body::-webkit-scrollbar {
   font-weight: 300;
   color: #6b757b;
   margin-bottom: 8px;
+}
+.sidebar__read{
+    height: calc(100vh - 140px);
+}
+
+/* setting */
+.section__title.page__title {
+  text-align: left;
+  border-bottom: 1px solid #e1e7ea;
+  padding-bottom: 16px;
+}
+.setting__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  margin-bottom: 32px;
+  border-bottom: 1px solid #e1e7ea;
+  padding-bottom: 24px;
+}
+.settings__sub--title {
+  font-size: 18px;
+  font-weight: 700;
+  color: #032b41;
+}
+.settings__text {
+  color: #032b41;
+}
+
+/* skelton box */
+
+.skeleton-box {
+  display: inline-block;
+  height: 1em;
+  position: relative;
+  overflow: hidden;
+  background-color: #dddbdd;
+}
+
+.skeleton-box::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.2) 20%,
+    rgba(255, 255, 255, 0.5) 60%,
+    rgba(255, 255, 255, 0)
+  );
+  -webkit-animation: shimmer 2s infinite;
+  animation: shimmer 2s infinite;
+  content: "";
+}
+@-webkit-keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+/* loader */
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid black;
+  border-color: black transparent black transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* library */
+
+.finished__books--block-wrapper {
+  background-color: #f1f6f4;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  padding: 32px;
+  border-radius: 12px;
+  margin: 0 auto 56px;
+  text-align: center;
+}
+.finished__books--title {
+  color: #042330;
+  font-weight: 600;
+  font-size: 18px;
+}
+.finished__books--sub-title {
+  color: #394547;
 }
